[metadata]
name = gooblerAPI
version = 0.0.1
author = JustEric
author_email = ericplayz@googlegroups.com
description = The Goobler API wrapper for Goobler.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WWEMGamer2/BotWrapperForGoobler
project_urls =
    Bug Tracker = https://github.com/WWEMGamer2/BotWrapperForGoobler/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
